--- a/home.html
+++ b/home.html
@@ -43,13 +43,18 @@
                     </div>
 
                     <div class="question-group">
-                        <label for="q2">Which clubs have you joined?</label>
-                        <textarea id="q2" placeholder="List any clubs or societies..."></textarea>
+                        <label for="q2">How are you adjusting to hostel/residence life? Any issues?</label>
+                        <textarea id="q2" placeholder="Share any issues if you have..."></textarea>
                     </div>
 
                     <div class="question-group">
-                        <label for="q3">What are your hobbies? How regularly do you practice them?</label>
-                        <textarea id="q3" placeholder="Describe your hobbies and frequency..."></textarea>
+                        <label for="q3">Which clubs have you joined?</label>
+                        <textarea id="q3" placeholder="List any clubs or societies..."></textarea>
+                    </div>
+
+                    <div class="question-group">
+                        <label for="q4">What are your hobbies? How regularly do you play them?</label>
+                        <textarea id="q4" placeholder="Describe your hobbies and frequency..."></textarea>
                     </div>
                 </div>
 
@@ -57,13 +62,13 @@
                     <h2>Academic Information</h2>
 
                     <div class="question-group">
-                        <label for="q4">Favourite subject and most difficult subject?</label>
-                        <textarea id="q4" placeholder="Share your academic preferences..."></textarea>
+                        <label for="q5">Favourite subject and most difficult subject?</label>
+                        <textarea id="q5" placeholder="Share your academic preferences..."></textarea>
                     </div>
 
                     <div class="question-group">
-                        <label for="q5">Do you have any prior skills or experience?</label>
-                        <textarea id="q5" placeholder="List any relevant skills..."></textarea>
+                        <label for="q6">Do you have any prior skills or experience?</label>
+                        <textarea id="q6" placeholder="List any relevant skills..."></textarea>
                     </div>
                 </div>
 
@@ -71,13 +76,13 @@
                     <h2>Personal Life</h2>
 
                     <div class="question-group">
-                        <label for="q6">How is your accommodation life? (hostel, renting, etc.)</label>
-                        <textarea id="q6" placeholder="Describe your living situation..."></textarea>
+                        <label for="q7">How is your accommodation life? (hostel, renting, etc.)</label>
+                        <textarea id="q7" placeholder="Describe your living situation..."></textarea>
                     </div>
 
                     <div class="question-group">
-                        <label for="q7">Do you know any seniors? How are those relationships?</label>
-                        <textarea id="q7" placeholder="Share about your connections with seniors..."></textarea>
+                        <label for="q8">Do you know any seniors? How are those relationships?</label>
+                        <textarea id="q8" placeholder="Share about your connections with seniors..."></textarea>
                     </div>
                 </div>
 
@@ -85,24 +90,33 @@
                     <h2>Support & Guidance</h2>
 
                     <div class="question-group">
-                        <label for="q8">What challenges are you currently facing?</label>
-                        <textarea id="q8" placeholder="Share any problems or difficulties..."></textarea>
+                        <label for="q9">What challenges are you currently facing?</label>
+                        <textarea id="q9" placeholder="Share any problems or difficulties..."></textarea>
                     </div>
 
                     <div class="question-group">
-                        <label for="q9">How can I (as your mentor) help you better?</label>
-                        <textarea id="q9" placeholder="Suggest ways your mentor can support you..."></textarea>
+                        <label for="q10">How can I (as your mentor) help you better?</label>
+                        <textarea id="q10" placeholder="Suggest ways your mentor can support you..."></textarea>
                     </div>
 
                     <div class="question-group">
-                        <label for="q10">Do you prefer regular check-ins or only when needed?</label>
-                        <textarea id="q10" placeholder="Share your preference for communication..."></textarea>
+                        <label for="q11">Do you prefer regular check-ins or only when needed?</label>
+                        <textarea id="q11" placeholder="Share your preference for communication..."></textarea>
                     </div>
 
                     <div class="question-group">
-                        <label for="q11">What's the biggest challenge you wish you had more support with right
+                        <label for="q12">What's the biggest challenge you wish you had more support with right
                             now?</label>
-                        <textarea id="q11" placeholder="Describe areas where you need more support..."></textarea>
+                        <textarea id="q12" placeholder="Describe areas where you need more support..."></textarea>
+                    </div>
+                </div>
+
+                <div class="form-section">
+                    <h2>Additional Information</h2>
+
+                    <div class="question-group">
+                        <label for="q13">Anything else you want to share?</label>
+                        <textarea id="q13" placeholder="Write down everything if any other issues..."></textarea>
                     </div>
                 </div>
 
